Attempt to fix spacing and add cloudless is

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -14,7 +14,7 @@
 }
 
 .intro {
-  margin-bottom: .5rem;
+  margin-bottom: 0;
   padding-bottom: 0;
   padding-top: 0;
 
